[package]
name = "cythion-exploration"
version = "0.1.0"
edition = "2021"

include = [
    "src/**/*",
    "src/*",
]

[dependencies]
bitfield = "0.14.0"
nusb = "0.1.10"
futures-lite = "2.0.1"
futures-channel = "0.3.21"
futures-util = "0.3.21"
num_enum = "0.7.2"
anyhow = { version = "1.0.79", features = ["backtrace"] }
bytemuck = "1.14.1"
bytemuck_derive = "1.5.0"
itertools = "0.12.1"
arc-swap = "1.6.0"
lrumap = "0.1.0"
memmap2 = "0.9.4"
page_size = "0.6.0"
tempfile = "3.9.0"
crc = "3.2.1"
derive_more = "0.99.17"
usb-ids = "1.2024.4"
num-format = "0.4.4"
humansize = "2.1.3"
hex = "0.4.3"